--- a/index.html
+++ b/index.html
@@ -1561,22 +1561,23 @@
         </div>
 
         <!-- Links Section -->
-        <div style="flex: 1; min-width: 200px; margin-bottom: 20px;">
-            <h3 style="color: #999; margin-bottom: 15px; font-size: 18px; font-weight: normal;">Links</h3>
-            <ul style="list-style: none;">
-                <li style="margin-bottom: 10px;"><a href="#" style="color: #444; text-decoration: none; transition: color 0.3s;">Home</a></li>
-                <li style="margin-bottom: 10px;"><a href="#" style="color: #444; text-decoration: none; transition: color 0.3s;">Puja</a></li>
-                <li style="margin-bottom: 10px;"><a href="#" style="color: #444; text-decoration: none; transition: color 0.3s;">Chadhava</a></li>
-                <li style="margin-bottom: 10px;"><a href="#" style="color: #444; text-decoration: none; transition: color 0.3s;">Temples</a></li>
-                <li style="margin-bottom: 10px;"><a href="#" style="color: #444; text-decoration: none; transition: color 0.3s;">Astrology</a></li>
-                <li style="margin-bottom: 10px;"><a href="#" style="color: #444; text-decoration: none; transition: color 0.3s;">VAMA Mall</a></li>
-            </ul>
-        </div>
+      <div style="flex: 1; min-width: 200px; margin-bottom: 20px;">
+  <h3 style="color: #999; margin-bottom: 15px; font-size: 18px; font-weight: normal;">Links</h3>
+  <ul style="list-style: none; padding: 0; margin: 0;">
+    <li style="margin: 0 0 10px 0; line-height: 1.6;"><a href="#" style="color: #444; text-decoration: none; transition: color 0.3s;">Home</a></li>
+    <li style="margin: 0 0 10px 0; line-height: 1.6;"><a href="#" style="color: #444; text-decoration: none; transition: color 0.3s;">Puja</a></li>
+    <li style="margin: 0 0 10px 0; line-height: 1.6;"><a href="#" style="color: #444; text-decoration: none; transition: color 0.3s;">Chadhava</a></li>
+    <li style="margin: 0 0 10px 0; line-height: 1.6;"><a href="#" style="color: #444; text-decoration: none; transition: color 0.3s;">Temples</a></li>
+    <li style="margin: 0 0 10px 0; line-height: 1.6;"><a href="#" style="color: #444; text-decoration: none; transition: color 0.3s;">Astrology</a></li>
+    <li style="margin: 0 0 10px 0; line-height: 1.6;"><a href="#" style="color: #444; text-decoration: none; transition: color 0.3s;">VAMA Mall</a></li>
+  </ul>
+</div>
+
 
         <!-- Help Section -->
         <div style="flex: 1; min-width: 200px; margin-bottom: 20px;">
             <h3 style="color: #999; margin-bottom: 15px; font-size: 18px; font-weight: normal;">Help</h3>
-            <ul style="list-style: none;">
+            <ul style="list-style: none; padding: 0; margin: 0;">
                 <li style="margin-bottom: 10px;"><a href="#" style="color: #444; text-decoration: none; transition: color 0.3s;">Contact</a></li>
                 <li style="margin-bottom: 10px;"><a href="#" style="color: #444; text-decoration: none; transition: color 0.3s;">Become An Astrologer</a></li>
             </ul>
@@ -1585,7 +1586,7 @@
         <!-- Documents Section -->
         <div style="flex: 1; min-width: 200px; margin-bottom: 20px;">
             <h3 style="color: #999; margin-bottom: 15px; font-size: 18px; font-weight: normal;">Documents</h3>
-            <ul style="list-style: none;">
+            <ul style="list-style: none; padding: 0; margin: 0;">
                 <li style="margin-bottom: 10px;"><a href="#" style="color: #444; text-decoration: none; transition: color 0.3s;">Disclaimers</a></li>
                 <li style="margin-bottom: 10px;"><a href="#" style="color: #444; text-decoration: none; transition: color 0.3s;">Privacy Policy</a></li>
                 <li style="margin-bottom: 10px;"><a href="#" style="color: #444; text-decoration: none; transition: color 0.3s;">Terms & Conditions</a></li>
